--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,9 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+Data_Augmentation_Model.ipynb
+EDA_TASK.ipynb
+TXT toCSV.ipynb
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
